# budget-dbt

./: .env  .gitignore  .sqlfluff  Makefile  Pipfile  README.md  mkdocs.yml  pyproject.toml
.gemini/: GEMINI.md  settings.json
.gemini/commands/: categorise.toml
.github/workflows/: ci.yml  dbt_test.yml  deploy_docs.yml  docs.yml  gemini-cli.yml  gemini-issue-automated-triage.yml  gemini-pr-review.yml  test_dbt.yml
apps/: budget_dashboard.py
dbt/: README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/macros/: categorise_keywords.sql  get_transfer_transactions.sql  lite_date_spine.sql  make_seed.sql  make_source.sql  properties.yml  standardise_ascii.sql
dbt/models/: docs.md  sources.yml
dbt/models/marts/: fct_transactions.sql  fx_rates.sql  properties.yml  schema.yml  transactions.sql
dbt/models/staging/: unit_tests.yml
dbt/seeds/: category_mapping.csv  dbt_project_evaluator_exceptions.csv  google_finance__eur_usd.csv  properties.yml  vendor_category_mapping.csv
dbt/seeds/mock/: google_finance__eur_usd__local.csv  mock_raw_bofa__activity.csv  mock_raw_revolut__personal.csv  properties.yml  raw_bofa__activity.csv  raw_revolut__joint.csv  (+2 more)
ddl/: raw_bofa__activity.sql  raw_revolut__joint.sql  raw_revolut__personal.sql  raw_revolut__spouse.sql
docs/: GEMINI_CLI_WORKFLOW.md  dashboard.md  dbt.md  index.html  index.md  loading.md  review.md  transforms.md
draft/: load.py
schema/: raw_bofa__activity.sql  raw_revolut__joint.sql  raw_revolut__personal.sql
script/: docs.sh  export.sh  fix-lint.sh  init_db.sh  load.sh  schema.sh
(+16 files in other folders)
